<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Power_Energy.AppBarOverlay">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Remove pinned text from appBar -->
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <LinearLayout
        android:orientation="vertical"
        android:padding="10dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:text="@string/title_gadgets"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/white"/>

                <Spinner
                    android:id="@+id/gadgets"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/app_name"
                    android:layout_marginTop="80dip"
                    android:background="@color/purple_200"
                    android:padding="10dip"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/title_voltage"
                    android:layout_marginBottom="5dp" />

                <Spinner
                    android:id="@+id/voltage"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/app_name"
                    android:layout_marginTop="10dip"
                    android:background="@color/purple_200"
                    android:padding="10dip"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/title_time"
                    android:layout_marginBottom="5dp" />

                <EditText
                    android:id="@+id/time"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:layout_marginTop="2dip"
                    android:padding="10dip"
                    android:background="@color/purple_200"
                    android:hint="@string/input_time"
                    />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/title_amperage"
                    android:layout_marginBottom="5dp" />

                <EditText
                    android:id="@+id/amperage"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:layout_marginTop="2dip"
                    android:padding="10dip"
                    android:background="@color/purple_200"
                    android:hint="@string/input_time"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/title_amount"
                    android:layout_marginBottom="5dp" />

                <EditText
                    android:id="@+id/amount"
                    android:maxLines="1"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:layout_marginTop="2dip"
                    android:padding="10dip"
                    android:background="@color/purple_200"
                    android:hint="@string/input_amount"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/title_potency"
                    android:layout_marginBottom="5dp" />

                <EditText
                    android:id="@+id/potency"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:layout_marginTop="2dip"
                    android:padding="10dip"
                    android:background="@color/purple_200"
                    android:hint="@string/input_potency"/>

                <TextView
                    android:id="@+id/calculation"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:background="@color/purple_200"
                    android:layout_marginBottom="5dp"
                    android:padding="10dip"
                    />

                <Button
                    android:id="@+id/btn_calculation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/function_calc"
                    android:textColor="@color/white" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>